Fix compiling SEAL in Debug mode.

--- a/native/examples/SEALExamples.vcxproj
+++ b/native/examples/SEALExamples.vcxproj
@@ -66,6 +66,7 @@
       <LanguageStandard>stdcpp17</LanguageStandard>
       <AdditionalOptions>/Zc:__cplusplus %(AdditionalOptions)</AdditionalOptions>
       <ControlFlowGuard>Guard</ControlFlowGuard>
+      <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
