Moved CMakeLists.txt to Other filter in SEALExamples.vcxproj.filters

--- a/native/examples/SEALExamples.vcxproj.filters
+++ b/native/examples/SEALExamples.vcxproj.filters
@@ -23,6 +23,8 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="CMakeLists.txt" />
+    <Text Include="CMakeLists.txt">
+      <Filter>Other</Filter>
+    </Text>
   </ItemGroup>
 </Project>
