Feature: added encrypt_zero_internal method that creates an encryption of zero in key_parms; added encrypt_zero methods that create an encryption of zero in prev_parms and modulus switch down to the given parm (data_parms_id_head by default); fresh encryption now has less noise due to introduced modulus switching, if key_parms has more than 1 moduli; random polynomial sampling methods in Encryptor and KeyGenerator are combined to util/polyrandom.h; corrected previously wrong uniform sampling.

--- a/native/src/seal/util/CMakeLists.txt
+++ b/native/src/seal/util/CMakeLists.txt
@@ -18,6 +18,7 @@ target_sources(seal
         ${CMAKE_CURRENT_LIST_DIR}/uintarithmod.cpp
         ${CMAKE_CURRENT_LIST_DIR}/uintarithsmallmod.cpp
         ${CMAKE_CURRENT_LIST_DIR}/uintcore.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/polyrandom.cpp
 )
 
 # Create the config file
@@ -50,6 +51,7 @@ install(
         ${CMAKE_CURRENT_LIST_DIR}/uintarithmod.h
         ${CMAKE_CURRENT_LIST_DIR}/uintarithsmallmod.h
         ${CMAKE_CURRENT_LIST_DIR}/uintcore.h
+        ${CMAKE_CURRENT_LIST_DIR}/polyrandom.h
     DESTINATION
         ${SEAL_INCLUDES_INSTALL_DIR}/seal/util
 )
