Feature: removed bit decomposition from SEAL C++ library, added modulus switching to key switching which is now noise free; provided two methods encrypting zero with secret key and public key in util/rlwe.h; combined galoiskeys and relinkeys to a base class kswitchkeys, combined core code of galoiskeys gen and relinkeys gen, combined core code of relinearize_internal and apply_galois_inplace. Issue: C++ examples work but are not correctly commented; C++ tests do not work; C# do not work. Todo: retouch modswitching in switch_key(...); update defaultparams.

--- a/native/src/seal/util/CMakeLists.txt
+++ b/native/src/seal/util/CMakeLists.txt
@@ -18,7 +18,7 @@ target_sources(seal
         ${CMAKE_CURRENT_LIST_DIR}/uintarithmod.cpp
         ${CMAKE_CURRENT_LIST_DIR}/uintarithsmallmod.cpp
         ${CMAKE_CURRENT_LIST_DIR}/uintcore.cpp
-        ${CMAKE_CURRENT_LIST_DIR}/polyrandom.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/rlwe.cpp
 )
 
 # Create the config file
@@ -51,7 +51,7 @@ install(
         ${CMAKE_CURRENT_LIST_DIR}/uintarithmod.h
         ${CMAKE_CURRENT_LIST_DIR}/uintarithsmallmod.h
         ${CMAKE_CURRENT_LIST_DIR}/uintcore.h
-        ${CMAKE_CURRENT_LIST_DIR}/polyrandom.h
+        ${CMAKE_CURRENT_LIST_DIR}/rlwe.h
     DESTINATION
         ${SEAL_INCLUDES_INSTALL_DIR}/seal/util
 )
