Added kswitchkeys.cpp|.h to the VS project and filter files. Improved comments for SEALContext. Fixed a minor issue with creating data chain even when key parms are not valid.

--- a/native/src/SEAL.vcxproj
+++ b/native/src/SEAL.vcxproj
@@ -18,13 +18,14 @@
     <ClInclude Include="seal\context.h" />
     <ClInclude Include="seal\decryptor.h" />
     <ClInclude Include="seal\defaultparams.h" />
-    <ClInclude Include="seal\intencoder.h" />
     <ClInclude Include="seal\encryptionparams.h" />
     <ClInclude Include="seal\encryptor.h" />
     <ClInclude Include="seal\evaluator.h" />
     <ClInclude Include="seal\galoiskeys.h" />
     <ClInclude Include="seal\intarray.h" />
+    <ClInclude Include="seal\intencoder.h" />
     <ClInclude Include="seal\keygenerator.h" />
+    <ClInclude Include="seal\kswitchkeys.h" />
     <ClInclude Include="seal\memorymanager.h" />
     <ClInclude Include="seal\plaintext.h" />
     <ClInclude Include="seal\publickey.h" />
@@ -59,30 +60,31 @@
     <ClInclude Include="seal\util\uintcore.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="seal\ckks.cpp" />
-    <ClCompile Include="seal\memorymanager.cpp" />
-    <ClCompile Include="seal\ciphertext.cpp" />
-    <ClCompile Include="seal\intencoder.cpp" />
-    <ClCompile Include="seal\plaintext.cpp" />
+    <ClCompile Include="seal\batchencoder.cpp" />
     <ClCompile Include="seal\biguint.cpp" />
+    <ClCompile Include="seal\ciphertext.cpp" />
+    <ClCompile Include="seal\ckks.cpp" />
     <ClCompile Include="seal\context.cpp" />
     <ClCompile Include="seal\decryptor.cpp" />
     <ClCompile Include="seal\encryptionparams.cpp" />
     <ClCompile Include="seal\encryptor.cpp" />
-    <ClCompile Include="seal\relinkeys.cpp" />
     <ClCompile Include="seal\evaluator.cpp" />
-    <ClCompile Include="seal\keygenerator.cpp" />
-    <ClCompile Include="seal\batchencoder.cpp" />
-    <ClCompile Include="seal\randomgen.cpp" />
     <ClCompile Include="seal\galoiskeys.cpp" />
+    <ClCompile Include="seal\intencoder.cpp" />
+    <ClCompile Include="seal\keygenerator.cpp" />
+    <ClInclude Include="seal\kswitchkeys.cpp" />
+    <ClCompile Include="seal\memorymanager.cpp" />
+    <ClCompile Include="seal\plaintext.cpp" />
+    <ClCompile Include="seal\randomgen.cpp" />
+    <ClCompile Include="seal\relinkeys.cpp" />
+    <ClCompile Include="seal\smallmodulus.cpp" />
     <ClCompile Include="seal\util\aes.cpp" />
     <ClCompile Include="seal\util\baseconverter.cpp" />
-    <ClCompile Include="seal\util\globals.cpp" />
-    <ClCompile Include="seal\util\numth.cpp" />
-    <ClCompile Include="seal\smallmodulus.cpp" />
-    <ClCompile Include="seal\util\hash.cpp" />
     <ClCompile Include="seal\util\clipnormal.cpp" />
+    <ClCompile Include="seal\util\globals.cpp" />
+    <ClCompile Include="seal\util\hash.cpp" />
     <ClCompile Include="seal\util\mempool.cpp" />
+    <ClCompile Include="seal\util\numth.cpp" />
     <ClCompile Include="seal\util\polyarith.cpp" />
     <ClCompile Include="seal\util\polyarithmod.cpp" />
     <ClCompile Include="seal\util\polyarithsmallmod.cpp" />
