--- a/native/src/SEAL.vcxproj
+++ b/native/src/SEAL.vcxproj
@@ -59,6 +59,7 @@
     <ClInclude Include="seal\util\uintarithmod.h" />
     <ClInclude Include="seal\util\uintarithsmallmod.h" />
     <ClInclude Include="seal\util\uintcore.h" />
+    <ClInclude Include="seal\valcheck.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="seal\batchencoder.cpp" />
@@ -93,6 +94,7 @@
     <ClCompile Include="seal\util\uintarithmod.cpp" />
     <ClCompile Include="seal\util\uintarithsmallmod.cpp" />
     <ClCompile Include="seal\util\uintcore.cpp" />
+    <ClCompile Include="seal\valcheck.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="CMakeLists.txt" />
