--- a/native/src/SEAL.vcxproj.filters
+++ b/native/src/SEAL.vcxproj.filters
@@ -177,6 +177,9 @@
     <ClInclude Include="seal\util\uintcore.h">
       <Filter>Header Files\util</Filter>
     </ClInclude>
+    <ClInclude Include="seal\valcheck.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="seal\batchencoder.cpp">
@@ -274,6 +277,9 @@
     </ClCompile>
     <ClCompile Include="seal\util\uintcore.cpp">
       <Filter>Source Files\util</Filter>
+    </ClCompile>
+    <ClCompile Include="seal\valcheck.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
