--- a/dotnet/native/sealnet/CMakeLists.txt
+++ b/dotnet/native/sealnet/CMakeLists.txt
@@ -27,5 +27,5 @@ target_sources(sealnetnative
         ${CMAKE_CURRENT_LIST_DIR}/secretkey_wrapper.cpp
         ${CMAKE_CURRENT_LIST_DIR}/smallmodulus_wrapper.cpp
         ${CMAKE_CURRENT_LIST_DIR}/utilities.cpp
-        ${CMAKE_CURRENT_LIST_DIR}/valcheck.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/valcheck_wrapper.cpp
 )
