--- a/native/src/SEAL.vcxproj
+++ b/native/src/SEAL.vcxproj
@@ -40,6 +40,7 @@
     <ClInclude Include="seal\util\clang.h" />
     <ClInclude Include="seal\util\clipnormal.h" />
     <ClInclude Include="seal\util\common.h" />
+    <ClInclude Include="seal\util\config.h" />
     <ClInclude Include="seal\util\defines.h" />
     <ClInclude Include="seal\util\gcc.h" />
     <ClInclude Include="seal\util\globals.h" />
