--- a/native/src/SEAL.vcxproj
+++ b/native/src/SEAL.vcxproj
@@ -40,11 +40,11 @@
     <ClInclude Include="seal\util\clang.h" />
     <ClInclude Include="seal\util\clipnormal.h" />
     <ClInclude Include="seal\util\common.h" />
-    <ClInclude Include="seal\util\config.h" />
     <ClInclude Include="seal\util\defines.h" />
     <ClInclude Include="seal\util\gcc.h" />
     <ClInclude Include="seal\util\globals.h" />
     <ClInclude Include="seal\util\hash.h" />
+    <ClInclude Include="seal\util\hestdparms.h" />
     <ClInclude Include="seal\util\locks.h" />
     <ClInclude Include="seal\util\mempool.h" />
     <ClInclude Include="seal\util\msvc.h" />
@@ -79,6 +79,7 @@
     <ClCompile Include="seal\plaintext.cpp" />
     <ClCompile Include="seal\randomgen.cpp" />
     <ClCompile Include="seal\smallmodulus.cpp" />
+    <ClCompile Include="seal\valcheck.cpp" />
     <ClCompile Include="seal\util\aes.cpp" />
     <ClCompile Include="seal\util\baseconverter.cpp" />
     <ClCompile Include="seal\util\clipnormal.cpp" />
@@ -95,7 +96,6 @@
     <ClCompile Include="seal\util\uintarithmod.cpp" />
     <ClCompile Include="seal\util\uintarithsmallmod.cpp" />
     <ClCompile Include="seal\util\uintcore.cpp" />
-    <ClCompile Include="seal\valcheck.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="CMakeLists.txt" />
