--- a/native/tests/SEALTest.vcxproj
+++ b/native/tests/SEALTest.vcxproj
@@ -39,6 +39,7 @@
     <ClCompile Include="seal\biguint.cpp" />
     <ClCompile Include="seal\ciphertext.cpp" />
     <ClCompile Include="seal\ckks.cpp" />
+    <ClCompile Include="seal\coeffmod.cpp" />
     <ClCompile Include="seal\context.cpp" />
     <ClCompile Include="seal\intencoder.cpp" />
     <ClCompile Include="seal\encryptionparams.cpp" />
