--- a/native/src/SEAL.vcxproj
+++ b/native/src/SEAL.vcxproj
@@ -15,9 +15,9 @@
     <ClInclude Include="seal\biguint.h" />
     <ClInclude Include="seal\ciphertext.h" />
     <ClInclude Include="seal\ckks.h" />
+    <ClInclude Include="seal\coeffmod.h" />
     <ClInclude Include="seal\context.h" />
     <ClInclude Include="seal\decryptor.h" />
-    <ClInclude Include="seal\defaultparams.h" />
     <ClInclude Include="seal\encryptionparams.h" />
     <ClInclude Include="seal\encryptor.h" />
     <ClInclude Include="seal\evaluator.h" />
@@ -67,6 +67,7 @@
     <ClCompile Include="seal\biguint.cpp" />
     <ClCompile Include="seal\ciphertext.cpp" />
     <ClCompile Include="seal\ckks.cpp" />
+    <ClCompile Include="seal\coeffmod.cpp" />
     <ClCompile Include="seal\context.cpp" />
     <ClCompile Include="seal\decryptor.cpp" />
     <ClCompile Include="seal\encryptionparams.cpp" />
