--- a/native/src/SEAL.vcxproj.filters
+++ b/native/src/SEAL.vcxproj.filters
@@ -183,7 +183,7 @@
     <ClInclude Include="seal\util\uintcore.h">
       <Filter>Header Files\util</Filter>
     </ClInclude>
-    <ClInclude Include="seal\coeffmod.h">
+    <ClInclude Include="seal\coeffmodulus.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -287,7 +287,7 @@
     <ClCompile Include="seal\util\uintcore.cpp">
       <Filter>Source Files\util</Filter>
     </ClCompile>
-    <ClCompile Include="seal\coeffmod.cpp">
+    <ClCompile Include="seal\coeffmodulus.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
