--- a/dotnet/native/SEALNetNative.vcxproj
+++ b/dotnet/native/SEALNetNative.vcxproj
@@ -100,7 +100,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="sealnet\coeffmodulus_wrapper.h" />
+    <ClInclude Include="sealnet\modulus_wrapper.h" />
     <ClInclude Include="sealnet\contextdata_wrapper.h" />
     <ClInclude Include="sealnet\batchencoder_wrapper.h" />
     <ClInclude Include="sealnet\biguint_wrapper.h" />
@@ -130,7 +130,7 @@
     <ClInclude Include="sealnet\valcheck_wrapper.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="sealnet\coeffmodulus_wrapper.cpp" />
+    <ClCompile Include="sealnet\modulus_wrapper.cpp" />
     <ClCompile Include="sealnet\contextdata_wrapper.cpp" />
     <ClCompile Include="sealnet\batchencoder_wrapper.cpp" />
     <ClCompile Include="sealnet\ciphertext_wrapper.cpp" />
