--- a/native/examples/SEALExamples.vcxproj
+++ b/native/examples/SEALExamples.vcxproj
@@ -101,9 +101,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="1_basic_bfv.cpp" />
-    <ClCompile Include="2_basic_encoders.cpp" />
-    <ClCompile Include="4_basic_ckks.cpp" />
+    <ClCompile Include="1_bfv_basics.cpp" />
+    <ClCompile Include="2_encoders.cpp" />
+    <ClCompile Include="4_ckks_basics.cpp" />
     <ClCompile Include="5_rotation.cpp" />
     <ClCompile Include="3_levels.cpp" />
     <ClCompile Include="6_performance.cpp" />
