Improved tests CMakeLists.txt

--- a/native/tests/CMakeLists.txt
+++ b/native/tests/CMakeLists.txt
@@ -26,7 +26,11 @@ option(INSTALL_GTEST OFF)
 mark_as_advanced(BUILD_GMOCK INSTALL_GTEST)
 
 # Add GTest
-add_subdirectory(thirdparty/googletest)
+set(GTEST_DIR "thirdparty/googletest")
+if(NOT EXISTS ${GTEST_DIR}/CMakeLists.txt)
+    message(FATAL_ERROR "Could not find `${GTEST_DIR}/CMakeLists.txt`. Run `git submodule update --init` and retry.")
+endif()
+add_subdirectory(${GTEST_DIR})
 
 # Link Microsoft SEAL and GTest
 target_link_libraries(sealtest SEAL::seal gtest)
