Bugfixing KeyGenerator constructors

--- a/native/tests/CMakeLists.txt
+++ b/native/tests/CMakeLists.txt
@@ -3,7 +3,7 @@
 
 cmake_minimum_required(VERSION 3.10)
 
-project(SEALTest VERSION 3.2.0 LANGUAGES CXX)
+project(SEALTest LANGUAGES CXX)
 
 # Executable will be in ../bin
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/../bin)
