--- a/native/src/cmake/SEALConfig.cmake.in
+++ b/native/src/cmake/SEALConfig.cmake.in
@@ -11,6 +11,7 @@
 #   SEAL_ENFORCE_HE_STD_SECURITY : Set to non-zero value if library is compiled to enforce at least
 #       a 128-bit security level based on HomomorphicEncryption.org security estimates
 #   SEAL_USE_MSGSL : Set to non-zero value if library is compiled with Microsoft GSL support
+#   SEAL_USE_ZLIB : Set to non-zero value if library is compiled with zlib support
 #   MSGSL_INCLUDE_DIR : Holds the path to Microsoft GSL if library is compiled with Microsoft GSL support
 
 include(CMakeFindDependencyMacro)
@@ -28,6 +29,11 @@ endif()
 set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
 set(THREADS_PREFER_PTHREAD_FLAG TRUE)
 find_dependency(Threads REQUIRED)
+
+set(SEAL_USE_ZLIB @SEAL_USE_ZLIB@)
+if(SEAL_USE_ZLIB)
+    find_dependency(ZLIB REQUIRED)
+endif()
 
 include(${CMAKE_CURRENT_LIST_DIR}/SEALTargets.cmake)
 
