--- a/native/src/seal/CMakeLists.txt
+++ b/native/src/seal/CMakeLists.txt
@@ -19,6 +19,7 @@ target_sources(seal
         ${CMAKE_CURRENT_LIST_DIR}/modulus.cpp
         ${CMAKE_CURRENT_LIST_DIR}/plaintext.cpp
         ${CMAKE_CURRENT_LIST_DIR}/randomgen.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/serialization.cpp
         ${CMAKE_CURRENT_LIST_DIR}/smallmodulus.cpp
         ${CMAKE_CURRENT_LIST_DIR}/valcheck.cpp
 )
