--- a/native/src/SEAL.vcxproj
+++ b/native/src/SEAL.vcxproj
@@ -61,6 +61,7 @@
     <ClInclude Include="seal\util\uintarithmod.h" />
     <ClInclude Include="seal\util\uintarithsmallmod.h" />
     <ClInclude Include="seal\util\uintcore.h" />
+    <ClInclude Include="seal\util\ztools.h" />
     <ClInclude Include="seal\valcheck.h" />
   </ItemGroup>
   <ItemGroup>
@@ -82,6 +83,7 @@
     <ClCompile Include="seal\randomgen.cpp" />
     <ClCompile Include="seal\serialization.cpp" />
     <ClCompile Include="seal\smallmodulus.cpp" />
+    <ClCompile Include="seal\util\ztools.cpp" />
     <ClCompile Include="seal\valcheck.cpp" />
     <ClCompile Include="seal\util\aes.cpp" />
     <ClCompile Include="seal\util\baseconverter.cpp" />
@@ -207,6 +209,5 @@
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
-  <ImportGroup Label="ExtensionTargets">
-  </ImportGroup>
+  <ImportGroup Label="ExtensionTargets" />
 </Project>
